--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             </nav>
             <div class="header-text">
-                <p>Computer Science Student</p>
+                <p>Computer Science<p1>Student</p1> </p>
                 <h1>Hi,I'm <span>Tamheed</span><br>Sarwath From<br>Bangalore,India</h1>
             </div>
         </div>
